--- a/Proyecto2BalzaCarrillo/src/GUI/MenuPrincipal.form
+++ b/Proyecto2BalzaCarrillo/src/GUI/MenuPrincipal.form
@@ -213,6 +213,9 @@
                 <Property name="text" type="java.lang.String" value="Check-Out"/>
                 <Property name="borderPainted" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CheckOutActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="CheckIn">
               <Properties>
